Fixed test failures and validated SAST security scan report